# Symbolic-Control-Synth

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  pyproject.toml
cpp/: CMakeLists.txt  main.cpp
cpp/src/: automaton.cpp  automaton.cu  automaton.cuh  automaton.hpp  bindings.cpp  constants.hpp  floodFill.cpp  floodFill.hpp  model_bindings.cpp  model_bindings.hpp  scratch.cu  utilsDevice.hpp  utilsHost.hpp  utilsMisc.hpp
gui/: app.py  components.py  context.py  exampleConfig.json  gridWindow.py  grid_widget.py  inputWindow.py  main.py  robotSimulation.py  test.py  utils.py  window.py
resources/: actual3D.json  exampleConfig.json  exampleConfig2.json  exampleConfig3D.json  exampleConfig4D.json  newConfig.json  otherBenchmark.json
symControl/: ExternalModules.pyi  bindings.pyi
symControl/logger/: __init__.py
symControl/model/: codePrinter.py  model.py  transitionFunction.py
symControl/space/: cell.py  continuousSpace.py  discreteSpace.py
symControl/utils/: constants.py  cudaCodeTemplates.py  validation.py
tests/: basicTest.py  benchmark.py  context.py  cooperative.py  mapping.py  pyQt-test.py  test_Xor.py  test_cooperative.py  test_discrete_space.py  test_transition_function.py
venv311/: pyvenv.cfg
